--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.jpa.show-sql = true
 # App Properties
 bezkoder.app.jwtSecret= aidaTeam
 bezkoder.app.jwtExpirationMs= 86400000
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size= 10MB
 spring.servlet.multipart.max-request-size= 11MB
 
