--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,13 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size= 10MB
 spring.servlet.multipart.max-request-size= 11MB
 
+
+
+#Mail properties
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=diasbagzat2@gmail.com
+spring.mail.password=ulmwsqjthepraccz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
