--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.password=c0c9b4857a17d415714e50b6ae2386e793e7db4ff6e5c1f3211cb
 
 #Local DB
 #
-#spring.datasource.url=jdbc:postgresql://localhost:5432/mentordb
-#spring.datasource.username= root
+#spring.datasource.url=jdbc:postgresql://localhost:5432/mentor
+#spring.datasource.username= postgres
 #spring.datasource.password=postgres
 
 
