--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -33,7 +33,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
     - name: copy file via ssh key
-    - uses: appleboy/scp-action@master
+      uses: appleboy/scp-action@master
       env:
         HOST: ${{ secrets.HOST }}
         USERNAME: ${{ secrets.USERNAME }}
