--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -45,5 +45,5 @@ jobs:
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.KEY }}
       with:
-        source: "./target/spring-boot-hackathon-0.0.1-SNAPSHOT"
+        source: "public/"
         target: "/usr/test/"
